ingress-test/k8s-ingress/haproxy-ingress-setup/haproxy-ingress-controller.yaml
#---
#apiVersion: v1
#kind: Namespace
#metadata:
#  name: htest
#  name: haproxy-controller

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: ingress-default-backend
  name: ingress-default-backend
#  namespace: htest
#  namespace: haproxy-controller
  namespace: default

spec:
  replicas: 1
  selector:
    matchLabels:
      run: ingress-default-backend
  template:
    metadata:
      labels:
        run: ingress-default-backend
    spec:
      containers:
      - name: ingress-default-backend
        image: gcr.io/google_containers/defaultbackend:1.0
        ports:
        - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: ingress-default-backend
  name: ingress-default-backend
#  namespace: htest
#  namespace: haproxy-controller
  namespace: default

spec:
  selector:
    run: ingress-default-backend
  ports:
  - name: port-1
    port: 8080
    protocol: TCP
    targetPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: haproxy-ingress
  name: haproxy-ingress
#  namespace: htest
#  namespace: haproxy-controller
  namespace: default

spec:
  replicas: 1
  selector:
    matchLabels:
      run: haproxy-ingress
  template:
    metadata:
      labels:
        run: haproxy-ingress
    spec:
      serviceAccountName: haproxy-ingress-service-account
      containers:
      - name: haproxy-ingress
        image: haproxytech/kubernetes-ingress
        args:
          - --configmap=default/haproxy
          - --default-backend-service=default/ingress-default-backend
#          - --configmap=htest/haproxy
#          - --default-backend-service=htest/ingress-default-backend
#          - --configmap=haproxy-controller/haproxy
#          - --default-backend-service=haproxy-controller/ingress-default-backend
        securityContext:
          runAsUser:  1000
          runAsGroup: 1000
          capabilities:
            drop:
              - ALL
            add:
              - NET_BIND_SERVICE
        resources:
          requests:
            cpu: "500m"
            memory: "50Mi"
        livenessProbe:
          httpGet:
            path: /healthz
            port: 1042
        ports:
        - name: rabbit-ssl
          containerPort: 5671         
        - name: http
          containerPort: 80
        - name: https
          containerPort: 443
        - name: stat
          containerPort: 1024
---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: haproxy-ingress
  name: haproxy-ingress
#  namespace: htest
  namespace: default
#  namespace: haproxy-controller
spec:
  selector:
    run: haproxy-ingress
  externalIPs:
    - 192.168.49.2  
  type: LoadBalancer
#  type: NodePort
  ports:
  - name: rabbit-ssl
    port: 5671
    protocol: TCP
    targetPort: 5671
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  - name: https
    port: 443
    protocol: TCP
    targetPort: 443
  - name: stat
    port: 1024
    protocol: TCP
    targetPort: 1024
