ingress-test/k8s-ingress/haproxy-ingress-setup/test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: app
  name: app
spec:
  replicas: 1
  selector:
    matchLabels:
      run: app
  template:
    metadata:
      labels:
        run: app
    spec:
      containers:
      - name: app
        image: jmalloc/echo-server
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
          successThreshold: 1
#---

#apiVersion: v1
#kind: service
#metadata:
#    name: app-service
#spec:
#    selector:
#      run: app
#    ports:
#    - name: http
#      protocol: TCP
#      port: 80
#      targetPort: 8080       

---
kind: Service
apiVersion: v1
metadata:
  name: app-service
#  labels:
#    app.kubernetes.io/name: app-service
spec:
  selector:
    run: app
#    app.kubernetes.io/name: app
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
      name: http
