ingress-test/k8s-ingress/haproxy-ingress-setup/test-ingress.yaml
#apiVersion: networking.k8s.io/v1beta1
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: test-ingress
 namespace: default
spec:
 rules:
 - host: example.com
   http:
     paths:
     - path: /
       backend:
         serviceName: fx-control-plane
         servicePort: 8080
#         serviceName: app-service
#         servicePort: 80
